<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground"

    android:gravity="center"
    tools:context="com.example.a4.androidmaterialdashboard.MaterialDashboardDemo">


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"


        android:gravity="center">

        <android.support.v7.widget.CardView android:layout_height="160dp"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="8dp"

            >
            <LinearLayout android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:gravity="center">


                <ImageView android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:src="@drawable/py"
                    android:background="@drawable/shape"
                    android:scaleType="centerCrop"
                    android:padding="10dp"

                    />

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/python"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_margin="2dp"/>

                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/cardview_dark_background">

                </View>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/python1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView android:layout_height="160dp"
            android:layout_width="160dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="10dp"

            >
            <LinearLayout android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="10dp">


                <ImageView android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/java"
                    android:background="@drawable/shape"
                    android:padding="10dp"
                    />

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/java"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:layout_margin="2dp"/>

                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/cardview_dark_background">

                </View>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/java1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>




    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"


        android:gravity="center">

        <android.support.v7.widget.CardView android:layout_height="160dp"
            android:layout_width="160dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape"
                    android:contentDescription=""
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cpp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/cpp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background">

                </View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cpp1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView android:layout_height="160dp"
            android:layout_width="160dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="10dp"
            >
            <LinearLayout android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="10dp">


                <ImageView android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cs"
                    android:background="@drawable/shape"
                    android:padding="10dp"
                    />

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Csharp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:layout_margin="2dp"/>

                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/cardview_dark_background">

                </View>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Csharp1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>




    </LinearLayout>


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"


        android:gravity="center">

        <android.support.v7.widget.CardView android:layout_height="140dp"
            android:layout_width="340dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="10dp"
            >
            <LinearLayout android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape"
                    android:scaleType="centerCrop"
                    android:padding="20dp"
                    android:src="@drawable/js" />

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/js"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:layout_margin="2dp"/>

                <View android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/cardview_dark_background">

                </View>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/js1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                   />
            </LinearLayout>

        </android.support.v7.widget.CardView>






    </LinearLayout>






</LinearLayout>
